# Cpp-Primer

./: .gitignore  CMakeLists.txt  README.md
ch01/: CMakeLists.txt  README.md  ex1_10.cpp  ex1_11.cpp  ex1_16.cpp  ex1_20.cpp  ex1_21.cpp  ex1_22.cpp  ex1_23.cpp  ex1_9.cpp
ch02/: CMakeLists.txt  README.md  ex2_34.cpp  ex2_35.cpp  ex2_4.cpp  ex2_42.h  ex2_42_1.cpp  ex2_42_2.cpp  ex2_42_3.cpp
ch03/: CMakeLists.txt  README.md  ex3_10.cpp  ex3_14.cpp  ex3_15.cpp  ex3_16.cpp  ex3_17.cpp  ex3_18.cpp  ex3_19.cpp  ex3_1a.cpp  ex3_1b.cpp  ex3_20a.cpp  ex3_20b.cpp  ex3_21.cpp  ex3_22.cpp  ex3_23.cpp  ex3_24.cpp  ex3_25.cpp  ex3_2a.cpp  ex3_2b.cpp  ex3_31.cpp  ex3_32.cpp  ex3_35.cpp  ex3_36.cpp  ex3_39.cpp  ex3_40.cpp  ex3_41.cpp  ex3_42.cpp  ex3_43.cpp  ex3_44.cpp  ex3_45.cpp  ex3_4a.cpp  ex3_4b.cpp  ex3_5a.cpp  ex3_5b.cpp  ex3_6.cpp  ex3_8.cpp
ch04/: CMakeLists.txt  README.md  ex4_21.cpp  ex4_22.cpp  ex4_28.cpp
ch05/: CMakeLists.txt  README.md  ex5_10.cpp  ex5_11.cpp  ex5_12.cpp  ex5_14.cpp  ex5_17.cpp  ex5_19.cpp  ex5_20.cpp  ex5_21.cpp  ex5_23.cpp  ex5_24.cpp  ex5_25.cpp  ex5_5.cpp  ex5_6.cpp  ex5_9.cpp
ch06/: CMakeLists.txt  Chapter6.h  README.md  ex6_10.cpp  ex6_11.cpp  ex6_12.cpp  ex6_17.cpp  ex6_21.cpp  ex6_22.cpp  ex6_23.cpp  ex6_25_26.cpp  ex6_27.cpp  ex6_33.cpp  ex6_42.cpp  ex6_44.cpp  ex6_47.cpp  ex6_51.cpp  ex6_54_55_56.cpp  fact.cc  factMain.cc
ch07/: CMakeLists.txt  README.md  ex7_01.cpp  ex7_02.h  ex7_03.cpp  ex7_04.h  ex7_05.h  ex7_06.h  ex7_07.cpp  ex7_09.h  ex7_11.cpp  ex7_11.h  ex7_12.h  ex7_13.cpp  ex7_15.h  ex7_21.h  ex7_22.h  ex7_23.h  ex7_24.h  ex7_26.cpp  ex7_26.h  ex7_27.h  ex7_27_TEST.cpp  ex7_31.h  ex7_32.h  ex7_41.cpp  ex7_41.h  ex7_41_TEST.cpp  ex7_43.cpp  ex7_50.h  ex7_53.h  ex7_57.h
ch08/: CMakeLists.txt  README.md  ex8_02.cpp  ex8_04.cpp  ex8_05.cpp  ex8_06.cpp  ex8_07.cpp  ex8_08.cpp  ex8_09.cpp  ex8_10.cpp  ex8_11.cpp  ex8_13.cpp
ch09/: CMakeLists.txt  README.md  ex9_13.cpp  ex9_14.cpp  ex9_15.cpp  ex9_16.cpp  ex9_18.cpp  ex9_19.cpp  ex9_20.cpp  ex9_22.cpp  ex9_24.cpp  ex9_26.cpp  ex9_27.cpp  ex9_31_1.cpp  ex9_31_2.cpp  ex9_32.cpp  ex9_33.cpp  ex9_34.cpp  ex9_38.cpp  ex9_41.cpp  ex9_43.cpp  ex9_44.cpp  ex9_45.cpp  ex9_46.cpp  ex9_47_1.cpp  ex9_47_2.cpp  ex9_49.cpp  ex9_50.cpp  ex9_51.cpp  ex9_52.cpp
ch10/: CMakeLists.txt  README.md  ex10_01_02.cpp  ex10_03_04.cpp  ex10_06.cpp  ex10_07.cpp  ex10_09.cpp  ex10_11.cpp  ex10_12.cpp  ex10_13.cpp  ex10_16.cpp  ex10_17.cpp  ex10_18_19.cpp  ex10_20_21.cpp  ex10_22.cpp  ex10_24.cpp  ex10_25.cpp  ex10_27.cpp  ex10_28.cpp  ex10_29.cpp  ex10_30.cpp  ex10_31.cpp  ex10_32.cpp  ex10_33.cpp  ex10_34_35_36_37.cpp  ex10_42.cpp
ch11/: CMakeLists.txt  README.md  ex11_11.cpp  ex11_12_13.cpp  ex11_14.cpp  ex11_20.cpp  ex11_23.cpp  ex11_24_25_26.cpp  ex11_27_28_29_30.cpp  ex11_31.cpp  ex11_32.cpp  ex11_33.cpp  ex11_38.cpp  ex11_3_4.cpp  ex11_7.cpp  ex11_8.cpp  ex11_9_10.cpp
ch12/: CMakeLists.txt  README.md  ex12_02.h  ex12_02_TEST.cpp  ex12_06.cpp  ex12_07.cpp  ex12_10.cpp  ex12_11.cpp  ex12_12.cpp  ex12_13.cpp  ex12_14.cpp  ex12_15.cpp  ex12_16.cpp  ex12_17_18.cpp  ex12_19.cpp  ex12_19.h  ex12_20.cpp  ex12_22.cpp  ex12_22.h  ex12_23.cpp  ex12_24.cpp  ex12_26.cpp  ex12_27_30.cpp  ex12_27_30.h  ex12_27_30_TEST.cpp  ex12_28.cpp  ex12_32.cpp  ex12_32.h  ex12_32_TEST.cpp  ex12_33.cpp  ex12_33.h  ex12_33_TEST.cpp
ch13/: CMakeLists.txt  README.md  ex13_05.h  ex13_08.h  ex13_11.h  ex13_13.cpp  ex13_17_1.cpp  ex13_17_2.cpp  ex13_17_3.cpp  ex13_18.cpp  ex13_18.h  ex13_19.h  ex13_22.h  ex13_26.cpp  ex13_26.h  ex13_27.h  ex13_28.cpp  ex13_28.h  ex13_30.h  ex13_31.cpp  ex13_31.h  ex13_34_36_37.cpp  ex13_34_36_37.h  ex13_39.cpp  ex13_39.h  ex13_40.cpp  ex13_40.h  ex13_42.cpp  ex13_42_StrVec.cpp  ex13_42_StrVec.h  ex13_42_TextQuery.cpp  ex13_42_TextQuery.h  ex13_44_47.cpp  ex13_44_47.h  ex13_48.cpp  ex13_49_Message.cpp  ex13_49_Message.h  ex13_49_StrVec.cpp  ex13_49_StrVec.h  ex13_49_String.cpp  (+5 more)
ch14/: CMakeLists.txt  README.md  ex14_02.cpp  ex14_02.h  ex14_02_TEST.cpp  ex14_05.cpp  ex14_05.h  ex14_05_TEST.cpp  ex14_13.cpp  ex14_13.h  ex14_13_TEST.cpp  ex14_15.cpp  ex14_15.h  ex14_15_TEST.cpp  ex14_16_StrBlob.cpp  ex14_16_StrBlob.h  ex14_16_StrBlobTest.cpp  ex14_16_StrVec.h  ex14_16_StrVecMain.cpp  ex14_16_String.cpp  ex14_16_String.h  ex14_16_StringMain.cpp  ex14_18_StrBlob.cpp  ex14_18_StrBlob.h  ex14_18_StrBlobTest.cpp  ex14_18_StrVec.cpp  ex14_18_StrVec.h  ex14_18_String.cpp  ex14_18_String.h  ex14_18_StringMain.cpp  ex14_22.cpp  ex14_22.h  ex14_22_TEST.cpp  ex14_23.cpp  ex14_23.h  ex14_23_TEST.cpp  ex14_24.cpp  ex14_24.h  ex14_24_TEST.cpp  ex14_26_StrBlob.cpp  (+30 more)
ch15/: CMakeLists.txt  ex15.24.25.cpp
ch15/ex15.11/: CMakeLists.txt
ch15/ex15.42_c/: queryresult.h
ch15/ex15.7/: bulk_quote.cpp  bulk_quote.h  limit_quote.h  main.cpp  quote.h
ch15/ex15.8.9.10/: CMakeLists.txt
ch17/: CMakeLists.txt
ch17/17_37_38/: CMakeLists.txt
ch17/ex17.3/: CMakeLists.txt
ch18/: 18_18 18_19.cpp  CMakeLists.txt
ch19/: CMakeLists.txt
include/: CMakeLists.txt
