include_directories(../include/Sales_item.h)
add_executable(ex1_1 ex1_1.cpp)
add_executable(ex1_9 ex1_9.cpp)
add_executable(ex1_10 ex1_10.cpp)
add_executable(ex1_11 ex1_11.cpp)
add_executable(ex1_16 ex1_16.cpp)
add_executable(ex1_20 ex1_20.cpp)
add_executable(ex1_21 ex1_21.cpp)
add_executable(ex1_22 ex1_22.cpp)
target_link_directories(ex1_22 PRIVATE ${PROJECT_SOURCE_DIR}/include)
add_executable(ex1_23 ex1_23.cpp)
