add_executable(ex3_1a ex3_1a.cpp)
add_executable(ex3_1b ex3_1b.cpp)
add_executable(ex3_2a ex3_2a.cpp)
add_executable(ex3_2b ex3_2b.cpp)
add_executable(ex3_4a ex3_4a.cpp)
add_executable(ex3_4b ex3_4b.cpp)
add_executable(ex3_5a ex3_5a.cpp)
add_executable(ex3_5b ex3_5b.cpp)
add_executable(ex3_6 ex3_6.cpp)
add_executable(ex3_8 ex3_8.cpp)
add_executable(ex3_10 ex3_10.cpp)
add_executable(ex3_14 ex3_14.cpp)
add_executable(ex3_15 ex3_15.cpp)
add_executable(ex3_16 ex3_16.cpp)
add_executable(ex3_17 ex3_17.cpp)
add_executable(ex3_18 ex3_18.cpp)
add_executable(ex3_19 ex3_19.cpp)
add_executable(ex3_20a ex3_20a.cpp)
add_executable(ex3_20b ex3_20b.cpp)
add_executable(ex3_21 ex3_21.cpp)
add_executable(ex3_22 ex3_22.cpp)
add_executable(ex3_23 ex3_23.cpp)
add_executable(ex3_24 ex3_24.cpp)
add_executable(ex3_25 ex3_25.cpp)
add_executable(ex3_31 ex3_31.cpp)
add_executable(ex3_32 ex3_32.cpp)
add_executable(ex3_35 ex3_35.cpp)
add_executable(ex3_36 ex3_36.cpp)
add_executable(ex3_39 ex3_39.cpp)
add_executable(ex3_40 ex3_40.cpp)
add_executable(ex3_41 ex3_41.cpp)
add_executable(ex3_42 ex3_42.cpp)
add_executable(ex3_43 ex3_43.cpp)
add_executable(ex3_44 ex3_44.cpp)
add_executable(ex3_45 ex3_45.cpp)
