add_executable(ex5_5 ex5_5.cpp)
add_executable(ex5_6 ex5_6.cpp)
add_executable(ex5_9 ex5_9.cpp)
add_executable(ex5_10 ex5_10.cpp)
add_executable(ex5_11 ex5_11.cpp)
add_executable(ex5_12 ex5_12.cpp)
add_executable(ex5_14 ex5_14.cpp)
add_executable(ex5_17 ex5_17.cpp)
add_executable(ex5_19 ex5_19.cpp)
add_executable(ex5_20 ex5_20.cpp)
add_executable(ex5_21 ex5_21.cpp)
add_executable(ex5_23 ex5_23.cpp)
add_executable(ex5_24 ex5_24.cpp)
add_executable(ex5_25 ex5_25.cpp)
