add_executable(ex6_10 ex6_10.cpp)
add_executable(ex6_11 ex6_11.cpp)
add_executable(ex6_12 ex6_12.cpp)
add_executable(ex6_17 ex6_17.cpp)
add_executable(ex6_21 ex6_21.cpp)
add_executable(ex6_22 ex6_22.cpp)
add_executable(ex6_23 ex6_23.cpp)
add_executable(ex6_25_26 ex6_25_26.cpp)
add_executable(ex6_27 ex6_27.cpp)
add_executable(ex6_33 ex6_33.cpp)
add_executable(ex6_42 ex6_42.cpp)
add_executable(ex6_44 ex6_44.cpp)
add_executable(ex6_47 ex6_47.cpp)
add_executable(ex6_51 ex6_51.cpp)
add_executable(ex6_54_55_56 ex6_54_55_56.cpp)
add_executable(factMain fact.cc factMain.cc)