add_executable(ex7_01 ex7_01.cpp)
add_executable(ex7_03 ex7_03.cpp)
add_executable(ex7_07 ex7_07.cpp)
add_executable(ex7_11 ex7_11.cpp)
add_executable(ex7_13 ex7_13.cpp)
add_executable(ex7_26 ex7_26.cpp)
add_executable(ex7_27_TEST ex7_27_TEST.cpp)
add_executable(ex7_41 ex7_41.cpp)
add_executable(ex7_41_TEST ex7_41_TEST.cpp ex7_41.h)
add_executable(ex7_43 ex7_43.cpp)
