add_executable(ex9_13 ex9_13.cpp)
add_executable(ex9_14 ex9_14.cpp)
add_executable(ex9_15 ex9_15.cpp)
add_executable(ex9_16 ex9_16.cpp)
add_executable(ex9_18 ex9_18.cpp)
add_executable(ex9_19 ex9_19.cpp)
add_executable(ex9_20 ex9_20.cpp)
add_executable(ex9_22 ex9_22.cpp)
add_executable(ex9_24 ex9_24.cpp)
add_executable(ex9_26 ex9_26.cpp)
add_executable(ex9_27 ex9_27.cpp)
add_executable(ex9_31_1 ex9_31_1.cpp)
add_executable(ex9_31_2 ex9_31_2.cpp)
add_executable(ex9_32 ex9_32.cpp)
add_executable(ex9_33 ex9_33.cpp)
add_executable(ex9_34 ex9_34.cpp)
add_executable(ex9_38 ex9_38.cpp)
add_executable(ex9_41 ex9_41.cpp)
add_executable(ex9_43 ex9_43.cpp)
add_executable(ex9_44 ex9_44.cpp)
add_executable(ex9_45 ex9_45.cpp)
add_executable(ex9_46 ex9_46.cpp)
add_executable(ex9_47_1 ex9_47_1.cpp)
add_executable(ex9_47_2 ex9_47_2.cpp)
add_executable(ex9_49 ex9_49.cpp)
add_executable(ex9_50 ex9_50.cpp)
add_executable(ex9_51 ex9_51.cpp)
add_executable(ex9_52 ex9_52.cpp)
