add_executable(ex10_01_02 ex10_01_02.cpp)
add_executable(ex10_03_04 ex10_03_04.cpp)
add_executable(ex10_06 ex10_06.cpp)
add_executable(ex10_07 ex10_07.cpp)
add_executable(ex10_09 ex10_09.cpp)
add_executable(ex10_11 ex10_11.cpp)
add_executable(ex10_12 ex10_12.cpp)
add_executable(ex10_13 ex10_13.cpp)
add_executable(ex10_16 ex10_16.cpp)
add_executable(ex10_17 ex10_17.cpp)
add_executable(ex10_18_19 ex10_18_19.cpp)
add_executable(ex10_20_21 ex10_20_21.cpp)
add_executable(ex10_22 ex10_22.cpp)
add_executable(ex10_24 ex10_24.cpp)
add_executable(ex10_25 ex10_25.cpp)
add_executable(ex10_27 ex10_27.cpp)
add_executable(ex10_28 ex10_28.cpp)
add_executable(ex10_29 ex10_29.cpp)
add_executable(ex10_30 ex10_30.cpp)
add_executable(ex10_31 ex10_31.cpp)
add_executable(ex10_32 ex10_32.cpp)
add_executable(ex10_33 ex10_33.cpp)
add_executable(ex10_34_35_36_37 ex10_34_35_36_37.cpp)
add_executable(ex10_42 ex10_42.cpp)

