add_executable(ex11_3_4 ex11_3_4.cpp)
add_executable(ex11_7 ex11_7.cpp)
add_executable(ex11_8 ex11_8.cpp)
add_executable(ex11_9_10 ex11_9_10.cpp)
add_executable(ex11_11 ex11_11.cpp)
add_executable(ex11_12_13 ex11_12_13.cpp)
add_executable(ex11_14 ex11_14.cpp)
add_executable(ex11_20 ex11_20.cpp)
add_executable(ex11_23 ex11_23.cpp)
add_executable(ex11_24_25_26 ex11_24_25_26.cpp)
add_executable(ex11_27_28_29_30 ex11_27_28_29_30.cpp)
add_executable(ex11_31 ex11_31.cpp)
add_executable(ex11_32 ex11_32.cpp)
add_executable(ex11_33 ex11_33.cpp)
add_executable(ex11_38 ex11_38.cpp)
