add_executable(ex12_02_TEST ex12_02_TEST.cpp ex12_02.h)
add_executable(ex12_06 ex12_06.cpp)
add_executable(ex12_07 ex12_07.cpp)
add_executable(ex12_10 ex12_10.cpp)
add_executable(ex12_11 ex12_11.cpp)
add_executable(ex12_13 ex12_13.cpp)
add_executable(ex12_14 ex12_14.cpp)
add_executable(ex12_15 ex12_15.cpp)
add_executable(ex12_16 ex12_16.cpp)
add_executable(ex12_17_18 ex12_17_18.cpp)
add_executable(ex12_19 ex12_19.cpp)
add_executable(ex12_20 ex12_20.cpp)
add_executable(ex12_22 ex12_22.cpp)
add_executable(ex12_23 ex12_23.cpp)
add_executable(ex12_24 ex12_24.cpp)
add_executable(ex12_26 ex12_26.cpp)
add_executable(ex12_27_30 ex12_27_30.cpp)
add_executable(ex12_27_30_TEST ex12_27_30_TEST.cpp)
add_executable(ex12_28 ex12_28.cpp)
add_executable(ex12_32 ex12_32.cpp)
add_executable(ex12_32_TEST ex12_32_TEST.cpp ex12_32.h)
add_executable(ex12_33 ex12_33.cpp)
add_executable(ex12_33_TEST ex12_33_TEST.cpp ex12_33.h)
