add_executable(ex13_13 ex13_13.cpp)
add_executable(ex13_17_1 ex13_17_1.cpp)
add_executable(ex13_17_2 ex13_17_2.cpp)
add_executable(ex13_17_3 ex13_17_3.cpp)
add_executable(ex13_18 ex13_18.cpp)
add_executable(ex13_31 ex13_31.cpp)
add_executable(ex13_39 ex13_39.cpp)
add_executable(ex13_42_StrVec ex13_42_StrVec.cpp)
add_executable(ex13_42 ex13_42.cpp)
add_executable(ex13_28 ex13_28.cpp)
add_executable(ex13_44_47 ex13_44_47.cpp)
add_executable(ex13_34_36_37 ex13_34_36_37.cpp)
add_executable(ex13_40 ex13_40.cpp)
add_executable(ex13_42_TextQuery ex13_42_TextQuery.cpp)
add_executable(ex13_26 ex13_26.cpp)
add_executable(ex13_48 ex13_48.cpp)
add_executable(ex13_49_Message ex13_49_Message.cpp)
add_executable(ex13_49_String ex13_49_String.cpp)
add_executable(ex13_49_StrVec ex13_49_StrVec.cpp)
add_executable(ex13_53 ex13_53.cpp)
add_executable(ex13_53_test ex13_53_test.cpp)
add_executable(ex13_58 ex13_58.cpp)