add_executable(ex14_30_StrBlobTest ex14_30_StrBlobTest.cpp)
add_executable(ex14_16_String ex14_16_String.cpp)
add_executable(ex14_42 ex14_42.cpp)
add_executable(ex14_18_StrBlob ex14_18_StrBlob.cpp)
add_executable(ex14_16_StringMain ex14_16_StringMain.cpp)
add_executable(ex14_27_28_StrBlobTest ex14_27_28_StrBlobTest.cpp)
add_executable(ex14_22 ex14_22.cpp)
add_executable(ex14_24_TEST ex14_24_TEST.cpp)
add_executable(ex14_26_StrBlobTest ex14_26_StrBlobTest.cpp)
add_executable(ex14_37 ex14_37.cpp)
add_executable(ex14_22_TEST ex14_22_TEST.cpp)
add_executable(ex14_45_TEST ex14_45_TEST.cpp)
add_executable(ex14_27_28_StrBlob ex14_27_28_StrBlob.cpp)
add_executable(ex14_13_TEST ex14_13_TEST.cpp)
add_executable(ex14_18_StrBlobTest ex14_18_StrBlobTest.cpp)
add_executable(ex14_38_39 ex14_38_39.cpp)
add_executable(ex14_16_StrBlob ex14_16_StrBlob.cpp)
add_executable(ex14_18_String ex14_18_String.cpp)
add_executable(ex14_18_StringMain ex14_18_StringMain.cpp)
add_executable(ex14_18_StrVec ex14_18_StrVec.cpp)
add_executable(ex14_18_StrVecMain ex14_18_StrVecMain.cpp)
add_executable(ex14_05_TEST ex14_05_TEST.cpp)
add_executable(ex14_24 ex14_24.cpp)
add_executable(ex14_49 ex14_49.cpp)
add_executable(ex14_16_StrVecMain ex14_16_StrVecMain.cpp)
add_executable(ex14_16_StrVec ex14_16_StrVec.cpp)
add_executable(ex14_16_StrBlobTest ex14_16_StrBlobTest.cpp)
add_executable(ex14_15_TEST ex14_15_TEST.cpp)
add_executable(ex14_40 ex14_40.cpp)
add_executable(ex14_43 ex14_43.cpp)
add_executable(ex14_23 ex14_23.cpp)
add_executable(ex14_02 ex14_02.cpp)
add_executable(ex14_26_StringMain ex14_26_StringMain.cpp)
add_executable(ex14_05 ex14_05.cpp)
add_executable(ex14_35 ex14_35.cpp)
add_executable(ex14_30_StrBlob ex14_30_StrBlob.cpp)
add_executable(ex14_44 ex14_44.cpp)
add_executable(ex14_45 ex14_45.cpp)
add_executable(ex14_49_TEST ex14_49_TEST.cpp)
add_executable(ex14_15 ex14_15.cpp)
add_executable(ex14_23_TEST ex14_23_TEST.cpp)
add_executable(ex14_07_TEST ex14_07_TEST.cpp)
add_executable(ex14_26_StrVec ex14_26_StrVec.cpp)
add_executable(ex14_26_String ex14_26_String.cpp)
add_executable(ex14_32 ex14_32.cpp)
add_executable(ex14_07 ex14_07.cpp)
add_executable(ex14_26_StrVecMain ex14_26_StrVecMain.cpp)
add_executable(ex14_26_StrBlob ex14_26_StrBlob.cpp)
add_executable(ex14_36 ex14_36.cpp)
add_executable(ex14_13 ex14_13.cpp)
add_executable(ex14_02_TEST ex14_02_TEST.cpp)