add_subdirectory(ex15.8.9.10)
add_subdirectory(ex15.11)
add_subdirectory(ex15.12.13.14)
add_subdirectory(ex15.15.16.17)
add_subdirectory(ex15.18.19.20)
add_subdirectory(ex15.21.22)
add_subdirectory(ex15.26)
add_subdirectory(ex15.27)
add_subdirectory(ex15.28.29)
add_subdirectory(ex15.1.2.3)
add_subdirectory(ex15.30)
add_subdirectory(ex15.34.35.36.38)
add_subdirectory(ex15.39.40)
add_subdirectory(ex15.42_b)
add_subdirectory(ex15.42_c)
add_subdirectory(ex15.4.5.6)
add_subdirectory(ex15.7)
add_subdirectory(ex15.9)
add_executable(ex15.23 ex15.23.cpp)
add_executable(ex15.24.25 ex15.24.25.cpp)
add_executable(ex15.31.32.33 ex15.31.32.33.cpp)