add_subdirectory(ex17.3)
add_subdirectory(17_37_38)
add_executable(17_24 17_24.cpp)
add_executable(17_25 17_25.cpp)
add_executable(17_27 17_27.cpp)
add_executable(17_35_36 17_35_36.cpp)
add_executable(ex17_1_2 ex17_1_2.cpp)
add_executable(ex17_4_5_6_7_8 ex17_4_5_6_7_8.cpp)
add_executable(ex17_4_5_6_7_8_SalesData ex17_4_5_6_7_8_SalesData.cpp)
add_executable(ex17_9 ex17_9.cpp)
add_executable(ex17_10 ex17_10.cpp)
add_executable(ex17_11_12_13 ex17_11_12_13.cpp)
add_executable(ex17_14_15_16 ex17_14_15_16.cpp)
add_executable(ex17_17_18 ex17_17_18.cpp)
add_executable(ex17_19_20 ex17_19_20.cpp)
add_executable(ex17_21 ex17_21.cpp)
add_executable(ex17_23 ex17_23.cpp)
add_executable(ex17_28_29_30 ex17_28_29_30.cpp)
add_executable(ex17_33 ex17_33.cpp)

